--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
       at fuga cum placeat possimus voluptatem nihil dicta, delectus totam
       tenetur deleniti nemo.
     </p>
+    <hr />
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora culpa,
+      sed animi at iure non.
+    </p>
   </body>
 </html>
